fixed about text alignment

--- a/sylkemohle/src/Hero.css
+++ b/sylkemohle/src/Hero.css
@@ -511,7 +511,8 @@ transition: opacity 1.5s ease-in ;
   align-items: baseline;
   padding: 4px;
   margin-bottom: 40px;
-  min-width: 100%;
+  width: 95%;
+  align-self: center;
   gap: 4px;
 }
 .about-qa-head{
